fixes some spacing issues with headings and makes code blocks a little nicer

--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -5,9 +5,13 @@ pre, code, tt {
 	border-radius: 2px;
 	line-height: 1.4;
 	font-weight: 400;
-	background-color: #404145;
-	color: #FAFAFA;
+	background-color: #343d46;//#404145;
+	color: #eff1f5;//#FAFAFA;
 	border-radius: 2px;
+}
+
+code {
+	padding: 4px 6px;
 }
 
 pre {
