--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -164,7 +164,7 @@ header {
 	h3::before {
 		content: "";
 		@extend hr;
-		margin: 60px 0;
+		margin: 30px 0;
 	}
 }
 
