--- a/_sass/_pygments.scss
+++ b/_sass/_pygments.scss
@@ -1,7 +1,7 @@
 .highlight {
 	.hll { background-color: #ffffcc }
-	.c { color: #87ceeb} /* Comment */
-	.err { color: #ffffff} /* Error */
+	.c { color: #8fa1b3} /* Comment */
+	.err { color: #bf616a} /* Error */
 	.g { color: #ffffff} /* Generic */
 	.k { color: #f0e68c} /* Keyword */
 	.l { color: #ffffff} /* Literal */
@@ -30,8 +30,8 @@
 	.kr { color: #f0e68c} /* Keyword.Reserved */
 	.kt { color: #bdb76b} /* Keyword.Type */
 	.ld { color: #ffffff} /* Literal.Date */
-	.m { color: #EAB289} /* Literal.Number */
-	.s { color: #EAB289} /* Literal.String */
+	.m { color: #d08770} /* Literal.Number */
+	.s { color: #a3be8c} /* Literal.String */
 	.na { color: #8CF0E8} /* Name.Attribute */
 	.nb { color: #ffffff} /* Name.Builtin */
 	.nc { color: #ffffff} /* Name.Class */
