--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -140,7 +140,7 @@ hr {
 	display: block;
 	height: 1px;
 	border: 0;
-	border-top: #eee 1px solid;
+	border-top: #ddd 1px solid;
 	margin: 3.2em 0;
 	padding: 0;
 }
